# famille-busson

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: tests.yml
annuaire/: admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
annuaire/management/commands/: populate_dev_data.py
annuaire/static/css/: main.css
annuaire/static/js/: person_picker.js  presence_calendar.js
annuaire/templates/annuaire/: _presence_calendar.html  annuaire_list.html  base.html  bulk_account_create.html  chalet_detail.html  chalet_form.html  chalet_list.html  chalet_owners_form.html  home.html  password_change_forced.html  person_relations_form.html  personne_detail.html  presence_form.html  profile_create.html  update_form.html
annuaire/tests/: conftest.py  test_management_populate.py  test_views_auth.py  test_views_chalets.py  test_views_password.py  test_views_profile.py
famille_busson/: manage.py  settings.py  urls.py  wsgi.py
famille_busson/annuaire/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
famille_busson/annuaire/static/css/: main.css
famille_busson/annuaire/templates/annuaire/: annuaire_list.html  base.html  chalet_detail.html  chalet_list.html  home.html  login.html  no_profile.html  personne_detail.html  signup.html
famille_busson/annuaire/tests/: conftest.py  test_views_auth.py  test_views_chalets.py  test_views_profile.py  test_views_staff.py
famille_busson/famille_busson/: asgi.py  settings.py  urls.py
famille_busson/publications/: views.py
famille_busson/publications/templates/publications/: blogpost_list.html
famille_busson/publications/tests/: test_models.py  test_views_blog_post.py
publications/: admin.py  forms.py  models.py  urls.py  views.py
publications/static/js/: publication_attachments.js
publications/templates/publications/: _blogpost_card.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  comment_confirm_delete.html
publications/tests/: conftest.py  test_views_blog_post.py  test_views_comment.py
