[project]
name = "famille-busson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "dj-rest-auth>=7.0.1",
    "django>=5.1.6",
    "django-allauth>=65.4.1",
    "django-crispy-forms>=2.3",
    "jwt>=1.3.1",
    "pillow>=11.1.0",
    "requests>=2.32.3",
]
