[project]
name = "famille-busson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "crispy-bootstrap4>=2024.10",
    "cryptography>=46.0.5",
    "dj-rest-auth>=7.0.1",
    "django>=5.1.6",
    "django-allauth>=65.4.1",
    "django-crispy-forms>=2.3",
    "djangorestframework>=3.16.1",
    "idna>=3.11",
    "jwt>=1.3.1",
    "pillow>=11.1.0",
    "pycparser>=3.0",
    "requests>=2.32.3",
    "sqlparse>=0.5.5",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
]
