[project]
name = "famille-busson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "crispy-bootstrap5>=2026.3",
    "cryptography>=46.0.5",
    "dj-rest-auth>=7.0.1",
    "django>=5.1.6",
    "django-allauth>=65.4.1",
    "django-crispy-forms>=2.3",
    "djangorestframework>=3.16.1",
    "idna>=3.11",
    "jwt>=1.3.1",
    "pillow>=11.1.0",
    "pycparser>=3.0",
    "requests>=2.32.3",
    "sqlparse>=0.5.5",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
]

[dependency-groups]
test = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pytest-html>=4.1",
    "coverage[toml]>=7.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "famille_busson.settings"
pythonpath = ["famille_busson"]
testpaths = ["famille_busson/annuaire/tests"]
addopts = "-v --tb=short --cov=annuaire --cov-report=term-missing --cov-fail-under=80 --html=test-report.html --self-contained-html"

[tool.coverage.run]
source = ["annuaire"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
